Encodings (latin1 and utf8). Need to test

--- a/dtab.cabal
+++ b/dtab.cabal
@@ -22,5 +22,5 @@ Library
   ghc-options:        -Wall
 
 Executable dtab
-  Build-Depends:      base, dtab
+  Build-Depends:      base, dtab, text, bytestring
   Main-Is:            Main.hs
