--- a/dtab.cabal
+++ b/dtab.cabal
@@ -19,12 +19,13 @@ Category:           Data
 
 Library
   Build-Depends:    base >= 4 && <= 5, bytestring, transformers,
-                    data-binary-ieee754, binary, array, pretty
+                    data-binary-ieee754, binary, array, pretty, QuickCheck
   Exposed-modules:  Data.DTA
                     Data.DTA.PrettyPrint
                     Data.DTA.Crypt
                     Data.DTA.Lex
                     Data.DTA.Parse
+                    Data.DTA.Test
   hs-source-dirs:   src
   ghc-options:      -Wall
 
