--- a/dtab.cabal
+++ b/dtab.cabal
@@ -25,13 +25,18 @@ Library
                     Data.DTA.Crypt
                     Data.DTA.Lex
                     Data.DTA.Parse
-                    Data.DTA.Test
   hs-source-dirs:   src
   ghc-options:      -Wall
 
 Executable dtab
-  Build-Depends:    base, dtab, bytestring
+  Build-Depends:    base >= 4 && <= 5, dtab, bytestring
   Main-Is:          Main.hs
+
+Test-suite tests
+  Type:             exitcode-stdio-1.0
+  Main-is:          Test.hs
+  Build-depends:    base >= 4 && <= 5, dtab, bytestring, binary, QuickCheck
+  Ghc-options:      -Wall
 
 Source-Repository head
   Type:             git
