--- a/dtab.cabal
+++ b/dtab.cabal
@@ -31,6 +31,7 @@ Library
 
 Executable dtab
   Build-Depends:    base >= 4 && <= 5, dtab, bytestring
+  Other-modules:    Paths_dtab
   Main-Is:          Main.hs
 
 Test-suite tests
