--- a/dtab.cabal
+++ b/dtab.cabal
@@ -19,7 +19,8 @@ Category:           Data
 
 Library
   Build-Depends:    base >= 4 && <= 5, bytestring, transformers,
-                    data-binary-ieee754, binary, array, pretty, QuickCheck
+                    data-binary-ieee754, binary, array, pretty, QuickCheck,
+                    containers
   Exposed-modules:  Data.DTA
                     Data.DTA.Crypt
                     Data.DTA.Serialize
