--- a/dtab.cabal
+++ b/dtab.cabal
@@ -25,6 +25,7 @@ Library
                     Data.DTA.Crypt
                     Data.DTA.Serialize
                     Data.DTA.Serialize.Magma
+                    Data.DTA.Serialize.RB3
   Other-modules:    Data.DTA.Base
                     Data.DTA.Lex
                     Data.DTA.Parse
