--- a/dtab.cabal
+++ b/dtab.cabal
@@ -18,7 +18,7 @@ Cabal-version:      >= 1.8
 Category:           Data
 
 Library
-  Build-Depends:    base >= 4 && <= 5, bytestring, transformers,
+  Build-Depends:    base >= 4 && < 5, bytestring, transformers,
                     data-binary-ieee754, binary, array, pretty, QuickCheck,
                     containers
   Exposed-modules:  Data.DTA
@@ -34,14 +34,20 @@ Library
   ghc-options:      -Wall
 
 Executable dtab
-  Build-Depends:    base >= 4 && <= 5, dtab, bytestring
+  Build-Depends:    base >= 4 && < 5, dtab, bytestring
   Other-modules:    Paths_dtab
   Main-Is:          Main.hs
+  Ghc-options:      -Wall
+
+Executable dta2magma
+  Main-Is:          dta2magma.hs
+  Build-Depends:    base >= 4 && < 5, dtab, bytestring, containers
+  Ghc-options:      -Wall
 
 Test-suite tests
   Type:             exitcode-stdio-1.0
   Main-is:          Test.hs
-  Build-depends:    base >= 4 && <= 5, dtab, bytestring, binary, QuickCheck
+  Build-depends:    base >= 4 && < 5, dtab, bytestring, binary, QuickCheck
   Ghc-options:      -Wall
 
 Source-Repository head
