dta record macro: support for optional fields
In the data declaration, the optional field has type "Maybe x".
If the key is not present in the DTA it will be Nothing,
and if it is Nothing then when serialized the key will not be created.

--- a/dtab.cabal
+++ b/dtab.cabal
@@ -44,6 +44,11 @@ Executable dta2magma
   Build-Depends:    base >= 4 && < 5, dtab, bytestring, containers
   Ghc-options:      -Wall
 
+Executable dta2fof
+  Main-Is:          dta2fof.hs
+  Build-Depends:    base >= 4 && < 5, dtab, bytestring, containers
+  Ghc-options:      -Wall
+
 Test-suite tests
   Type:             exitcode-stdio-1.0
   Main-is:          Test.hs
