--- a/dtab.cabal
+++ b/dtab.cabal
@@ -39,15 +39,15 @@ Executable dtab
   Main-Is:          Main.hs
   Ghc-options:      -Wall
 
-Executable dta2magma
-  Main-Is:          dta2magma.hs
-  Build-Depends:    base >= 4 && < 5, dtab, bytestring, containers
-  Ghc-options:      -Wall
+-- Executable dta2magma
+--   Main-Is:          dta2magma.hs
+--   Build-Depends:    base >= 4 && < 5, dtab, bytestring, containers
+--   Ghc-options:      -Wall
 
-Executable dta2fof
-  Main-Is:          dta2fof.hs
-  Build-Depends:    base >= 4 && < 5, dtab, bytestring, containers
-  Ghc-options:      -Wall
+-- Executable dta2fof
+--   Main-Is:          dta2fof.hs
+--   Build-Depends:    base >= 4 && < 5, dtab, bytestring, containers
+--   Ghc-options:      -Wall
 
 Test-suite tests
   Type:             exitcode-stdio-1.0
