--- a/dtab.cabal
+++ b/dtab.cabal
@@ -20,7 +20,9 @@ Category:           Data
 Library
   Build-Depends:    base >= 4 && < 5, bytestring, transformers,
                     data-binary-ieee754, binary, array, pretty, QuickCheck,
-                    containers
+                    containers,
+                    process >= 1.2 && < 1.3
+                    -- for Setup.lhs
   Exposed-modules:  Data.DTA
                     Data.DTA.Crypt
                     Data.DTA.Serialize
