--- a/dtab.cabal
+++ b/dtab.cabal
@@ -17,16 +17,14 @@ category:           Data
 
 library
   build-depends:
-    base >= 4 && < 5
-    , bytestring
-    , transformers
-    , data-binary-ieee754
-    , binary
-    , array
-    , pretty
-    , containers
-    , process >= 1.2 && < 1.3
-    -- for Setup.lhs
+    base                  >= 4.7      && < 4.8
+    , bytestring          >= 0.10.4.0 && < 0.11
+    , transformers        >= 0.3.0.0  && < 0.5
+    , data-binary-ieee754 >= 0.4.4    && < 0.5
+    , binary              >= 0.7.1.0  && < 0.8
+    , array               >= 0.5.0.0  && < 0.6
+    , pretty              >= 1.1.1.1  && < 1.2
+    , containers          >= 0.5.5.1  && < 0.6
   exposed-modules:
     Data.DTA
     Data.DTA.Crypt
@@ -44,9 +42,9 @@ library
 
 Executable dtab
   build-depends:
-    base >= 4 && < 5
-    , dtab
-    , bytestring
+    base         >= 4.7      && < 4.8
+    , bytestring >= 0.10.4.0 && < 0.11
+    , dtab       == 0.8
   other-modules:      Paths_dtab
   Main-Is:            Main.hs
   ghc-options:        -Wall
