--- a/dtab.cabal
+++ b/dtab.cabal
@@ -1,5 +1,5 @@
 name:               dtab
-version:            1.0
+version:            1.0.0.1
 synopsis:           Harmonix (Guitar Hero, Rock Band) DTA/DTB metadata library
 description:
 
@@ -39,12 +39,13 @@ library
   hs-source-dirs:     src
   ghc-options:        -Wall
   default-language:   Haskell2010
+  build-tools:        alex, happy
 
 Executable dtab
   build-depends:
     base         >= 4.6      && < 4.9
     , bytestring >= 0.10.0.2 && < 0.11
-    , dtab       == 1.0
+    , dtab       == 1.0.0.1
   other-modules:      Paths_dtab
   Main-Is:            Main.hs
   ghc-options:        -Wall
