Fixes to DTA->DTB and GH2 DTB encryption

--- a/dtab.cabal
+++ b/dtab.cabal
@@ -17,14 +17,14 @@ category:           Data
 
 library
   build-depends:
-    base                  >= 4.6      && < 4.9
-    , bytestring          >= 0.10.0.2 && < 0.11
-    , transformers        >= 0.3.0.0  && < 0.5
-    , data-binary-ieee754 >= 0.4.4    && < 0.5
-    , binary              >= 0.5.1.1  && < 0.8
-    , array               >= 0.4.0.1  && < 0.6
-    , pretty              >= 1.1.1.0  && < 1.2
-    , containers          >= 0.5.0.0  && < 0.6
+    base
+    , bytestring
+    , transformers
+    , data-binary-ieee754
+    , binary
+    , array
+    , pretty
+    , containers
   exposed-modules:
     Data.DTA
     Data.DTA.Crypt
@@ -43,9 +43,9 @@ library
 
 Executable dtab
   build-depends:
-    base         >= 4.6      && < 4.9
-    , bytestring >= 0.10.0.2 && < 0.11
-    , dtab       == 1.0.0.1
+    base
+    , bytestring
+    , dtab
   other-modules:      Paths_dtab
   Main-Is:            Main.hs
   ghc-options:        -Wall
