--- a/dtab.cabal
+++ b/dtab.cabal
@@ -14,6 +14,7 @@ maintainer:         miketolly@gmail.com
 build-type:         Simple
 cabal-version:      >= 1.10
 category:           Data
+extra-source-files: CHANGES.md
 
 library
   build-depends:
