--- a/dtab.cabal
+++ b/dtab.cabal
@@ -35,7 +35,7 @@ library
     Data.DTA.Parse
     Data.DTA.PrettyPrint
   hs-source-dirs:     src
-  ghc-options:        -Wall -O
+  ghc-options:        -Wall
   default-language:   Haskell2010
   build-tools:        alex, happy
 
@@ -46,7 +46,7 @@ Executable dtab
     , dtab
   other-modules:      Paths_dtab
   Main-Is:            Main.hs
-  ghc-options:        -Wall -O
+  ghc-options:        -Wall
   default-language:   Haskell2010
 
 source-repository head
