--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.cabal-sandbox/
-cabal.sandbox.config
-dist/
-.stack-work/
-stack.yaml.lock
+/.cabal-sandbox/
+/cabal.sandbox.config
+/dist/
+/.stack-work/
+/stack.yaml.lock
+/dtab-v*
